# medseg-brats-monai

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  test.yml
configs/: eval.yaml  train.yaml
configs/model/: dynunet.yaml  segresnet.yaml  unet3d.yaml
demo/: app.py  requirements.txt
docker/: .dockerignore  Dockerfile
docs/: glossary.md
results/metrics/: results.csv
scripts/: download_data.sh  run_experiments.sh  visualize_preds.py
src/medseg_brats/: __init__.py  eval.py  train.py
src/medseg_brats/data/: __init__.py  dataset.py  split_generator.py  transforms.py
src/medseg_brats/losses/: __init__.py  dice_ce.py
src/medseg_brats/metrics/: __init__.py  segmentation.py
src/medseg_brats/models/: __init__.py  dynunet.py  segresnet.py  unet3d.py
tests/: conftest.py  test_dataset.py  test_inference.py  test_losses.py  test_metrics.py  test_models.py  test_transforms.py
