[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medseg-brats"
version = "0.1.0"
description = "3D Brain Tumor Segmentation Baseline on BraTS-GLI 2023 — Phase 1 of a PhD Medical Imaging AI Portfolio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
authors = [{ name = "Saeid Amini", email = "saeed.amiinii@gmail.com" }]
keywords = ["medical imaging", "brain tumor", "segmentation", "BraTS", "MONAI", "deep learning"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Medical imaging framework (includes nibabel, SimpleITK, scikit-image, etc.)
    "monai[all]==1.3.0",

    # Config management
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",

    # Experiment tracking
    "wandb==0.16.6",

    # Numerics / data
    "numpy==1.26.4",
    "scipy==1.13.0",
    "nibabel==5.2.1",
    "SimpleITK==2.3.1",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",

    # Visualization
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "plotly==5.21.0",

    # Demo
    "streamlit==1.33.0",

    # Notebook tooling
    "nbstripout==0.7.1",
    "ipykernel==6.29.4",

    # Data download
    "synapseclient==4.0.0",
    "tqdm==4.66.2",
    "requests==2.31.0",

    # Utilities
    "einops==0.7.0",
    "rich==13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.4.2",
    "black==24.4.2",
    "isort==5.13.2",
    "pre-commit==3.7.0",
]

[project.scripts]
medseg-train = "medseg_brats.train:main"
medseg-eval  = "medseg_brats.eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src/medseg_brats"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "gpu: marks tests that require a CUDA GPU (deselect with '-m not gpu')",
]

[tool.coverage.run]
source = ["src/medseg_brats"]
omit = ["*/tests/*"]
